@@ -1,72 +1,0 @@
-=encoding utf-8
-
-=head1 NAME
-
-At::Bluesky - Bluesky Sugar for the AT Protocol
-
-=head1 DESCRIPTION
-
-This is a cookbook. Or, it will be, eventually.
-
-=head1 Methods
-
-Bluesky. It's new.
-
-=head2 C<new( ... )>
-
-    At::Bluesky->new( identifier => 'sanko', password => '1111-2222-3333-4444' );
-
-Expected parameters include:
-
-=over
-
-=item C<identifier> - required
-
-Handle or other identifier supported by the server for the authenticating user.
-
-=item C<password> - required
-
-You know this!
-
-=back
-
-=head2 C<post( ... )>
-
-This one is easy.
-
-    use At;
-    my $bsky = At::Bluesky->new( identifier => 'sanko', password => '1111-aaaa-zzzz-0000' );
-    $bsky->post( text => 'Nice.' );
-
-Expected parameters:
-
-=over
-
-=item C<createdAt> - required
-
-Timestamp in ISO 8601.
-
-=item C<text> - required
-
-Post content. 300 max chars.
-
-=back
-
-=head1 LICENSE
-
-Copyright (C) Sanko Robinson.
-
-This library is free software; you can redistribute it and/or modify it under the terms found in the Artistic License
-2. Other copyrights, terms, and conditions may apply to data transmitted through this module.
-
-=head1 AUTHOR
-
-Sanko Robinson E<lt>sanko@cpan.orgE<gt>
-
-=begin stopwords
-
-Bluesky
-
-=end stopwords
-
-=cut
